<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTotalRunTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@id/cardViewTotalDistanceRun"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineTop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageViewTotalRunTime"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_duration"
                    app:layout_constraintBottom_toTopOf="@id/textViewTotalRunTimeValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:contentDescription="@string/total_run_duration_image" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewTotalRunTimeValue"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/textViewTotalRunTimeLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewTotalRunTime"
                    tools:text="8h 50m 2s" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewTotalRunTimeLabel"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/total_running_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTotalRunTimeValue" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTotalDistanceRun"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/cardViewTotalRunTime"
            app:layout_constraintTop_toTopOf="@id/guidelineTop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageViewTotalDistanceRun"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_distance"
                    app:layout_constraintBottom_toTopOf="@id/textViewTotalDistanceRunValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:contentDescription="@string/total_run_distance_image" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewTotalDistanceRunValue"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/textViewTotalDistanceRunLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewTotalDistanceRun"
                    tools:text="5.0 km" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewTotalDistanceRunLabel"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/total_distance_run"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTotalDistanceRunValue" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTotalCaloriesBurned"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@id/cardViewTotalDistanceRun"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/cardViewTotalRunTime">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageViewTotalCaloriesBurned"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_calories"
                    app:layout_constraintBottom_toTopOf="@id/textViewTotalCaloriesBurnedValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:contentDescription="@string/total_calories_burned_image" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewTotalCaloriesBurnedValue"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/textViewTotalCaloriesLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewTotalCaloriesBurned"
                    tools:text="30 kcal" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewTotalCaloriesLabel"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/total_calories_burned"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTotalCaloriesBurnedValue" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAverageSPeed"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/cardViewTotalCaloriesBurned"
            app:layout_constraintTop_toBottomOf="@id/cardViewTotalDistanceRun">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageViewAverageSpeed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_speed"
                    app:layout_constraintBottom_toTopOf="@id/textViewAverageSpeedValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:contentDescription="@string/average_speed_image" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewAverageSpeedValue"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/textViewAverageSpeedLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewAverageSpeed"
                    tools:text="10.5 km/h" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewAverageSpeedLabel"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/average_speed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewAverageSpeedValue" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewStatsMessage"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/view_your_running_stats_over_time"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/cardViewTotalCaloriesBurned" />

        <RadioGroup
            android:id="@+id/radioGroupChartOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/textViewStatsMessage">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonAvgSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/average_speed"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonCaloriesBurned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories_burned"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonRunningTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/running_time"
                android:textSize="12sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonRunningDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/running_distance"
                android:textSize="12sp" />

        </RadioGroup>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/radioGroupChartOptions" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
